--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -33,9 +33,9 @@ spring:
       enabled: false
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/infinityshopping
-    username: infinityshopping
-    password:
+    url: jdbc:postgresql://ec2-52-15-78-48.us-east-2.compute.amazonaws.com:5432/infinityshopping
+    username: postgres
+    password: Maldit4se4Rjave
     hikari:
       poolName: Hikari
       auto-commit: false
